improved TicketGenerator's interaction, changed repo structure